<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegistrationActivity"
    android:background="@color/colorPrimaryDark">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:src="@color/colorAccent"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"/>

        <LinearLayout
            android:id="@+id/register_form"
            android:layout_below="@id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_margin="20dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/white_layout">

            <EditText
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:hint="@string/name" />

            <EditText
                android:id="@+id/edt_uname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:hint="@string/username" />

            <EditText
                android:id="@+id/edt_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:hint="@string/identity_id"
                android:inputType="number"/>

            <EditText
                android:id="@+id/edt_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:hint="@string/address"/>

            <EditText
                android:id="@+id/edt_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:hint="@string/phone_number"
                android:inputType="phone"/>

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"/>

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:hint="@string/password"
                android:inputType="textPassword"/>

            <EditText
                android:id="@+id/edt_repassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:hint="@string/re_type_pass"
                android:inputType="textPassword"/>

        </LinearLayout>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_below="@id/register_form"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"
            android:layout_marginTop="31dp"
            android:background="@drawable/dark_layout"
            android:text="@string/register"
            android:textColor="@color/colorWhite"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_login"
            android:layout_below="@id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:text="@string/login_warn"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"/>

        <ProgressBar
            android:id="@+id/pg_regis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
</ScrollView>